change from ubantu

--- a/less/intro-header.less
+++ b/less/intro-header.less
@@ -4,9 +4,7 @@
 .intro-header {
 	background: no-repeat center center;
 	background-color: rgb(255, 94, 102);
-	// background-image: linear-gradient(rgba(255, 255, 255, 0) 60%, rgba(187, 2, 195, 0.34)), linear-gradient(70deg, rgba(22, 20, 187, 0.56) 32%, rgba(222, 100, 117, 0.58));
-	background-image: url("../img/background.jpg");
-	background-position: center -10px;
+	background-image: url('../img/background2.jpg');
 	background-attachment: scroll;
 	background-size: cover;
 
@@ -45,6 +43,7 @@
 		}
 		.site-heading-index {
 			display: none;
+			color: balck;
 			@media only screen and (min-width: 768px) {
 				display: block;
 			}
