--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,6 +9,6 @@
   <title>{% if page.title %}{{ page.title }} - {{ site.SEOTitle }}{% else %}{{ site.SEOTitle }}{% endif %}</title>
 
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
-  <link rel="stylesheet" href="/css/mensu-blog.min.css">
+  <link rel="stylesheet" href="/css/jackbytpe-blog.css">
   <script src="{{ "/js/outputs/commons-sync.min.js" | prepend: site.baseurl }}"></script>
 </head>
